--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^1.8.3",
+    "cors": "^2.8.5",
     "cra-template": "1.2.0",
     "firestore": "^1.1.6",
     "framer-motion": "^12.4.7",
